# uv-template

./: 0_clean.ipynb  pyproject.toml
.github/workflows/: setup-template.yml
