[project]
name = "uv-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "lonboard>=0.13.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "plotly>=6.5.0",
    "requests>=2.32.5",
]
